# ncBuilder

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/ncBuilder/: ncBuilder.py  ncHelper.py
src/ncBuilder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
