[metadata]
name = ncBuilder
version = 0.0.1
author = Francisco Silva Viana
author_email = chicoviana12@hotmail.com
description = ncBuilder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eksoss/ncBuilder
project_urls =
    Bug Tracker = https://github.com/Eksoss/ncBuilder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src